Do not close notes during session saving. Thanks for the patch Slávek!

BUG: 300456
FIXED-IN: 4.8.4
MERGE: 4.8